--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ROCK, PAPER, SCISSORS - The Odin Project Foundations</title>
 </head>
 <body>
     <script src="javascript.js"></script>
