Create rock-paper-scissors buttons and print results in console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>ROCK, PAPER, SCISSORS - The Odin Project Foundations</title>
 </head>
 <body>
+    <div id="user-selector">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+    
     <script src="javascript.js"></script>
 </body>
 </html>
