--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <button id="paper">PAPER</button>
         <button id="scissors">SCISSORS</button>
     </div>
+    <div id="human-choice">TU: </div>
+    <div id="computer-choice">ORDINADOR: </div>
+    <div id="result"></div>
+    <div id="score">TU: 0 / ORDINADOR: 0</div>
     
     <script src="javascript.js"></script>
 </body>
