Display the running score, and announce a winner of the game once one player reaches 5 points

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="computer-choice">ORDINADOR: </div>
     <div id="result"></div>
     <div id="score">TU: 0 / ORDINADOR: 0</div>
+    <div id="winner"></div>
     
     <script src="javascript.js"></script>
 </body>
